--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
+    "got": "^12.0.2",
+    "jsdom": "^19.0.0",
+    "node-fetch": "^3.2.3",
+    "sentence-case": "^3.0.4"
   },
   "deprecated": false,
   "description": "simple page with satirical message",
