feat(clock): replace path
dev and live paths differ

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 APP_ENV=production
 DEV_LOG_PATH="http:\/\/0\.0\.0\.0:3000\/logjs\.php"
 LOG_PATH="https:\/\/arewefuckedyet\.com\/service\/logjs\.php"
+
+DEV_JSON_PATH=http:\/\/localhost:63342\/doomsday\.json
+JSON_PATH=http:\/\/arewefuckedyet\.com\/doomsday\.json
