--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ APP_ENV=production
 DEV_LOG_PATH="http:\/\/0\.0\.0\.0:3000\/logjs\.php"
 LOG_PATH="https:\/\/arewefuckedyet\.com\/service\/logjs\.php"
 DEV_JSON_PATH="http:\/\/localhost:63342\/doomsday\.json"
-JSON_PATH="https:\/\/www\.arewefuckedyet\.com\/doomsday\.json"
+JSON_PATH="https:\/\/arewefuckedyet\.com\/doomsday\.json"
